# b2pf

./: .gitignore  132html  AUTHORS  COPYING  ChangeLog  CheckMan  LICENCE  Makefile.am  NEWS  PrepareRelease  README  README.md  RunTest  b2pf-config.in  configure.ac  libb2pf.pc.in
doc/: b2pf-config.1  b2pf.3  b2pftest.1  index.html.src
doc/html/: b2pf-config.html  b2pf.html  b2pftest.html
m4/: b2pf_visibility.m4
rules/: Arabic  Arabic-LigExtra
src/: b2pf.c  b2pf.h.generic  b2pf.h.in  b2pf_context.c  b2pf_error.c  b2pf_format.c  b2pf_internal.h  b2pf_tree.c  b2pf_valid_utf.c  b2pftest.c  config.h.generic  config.h.in
testdata/: testinput0  testinput1  testinput2  testinput3  testoutput0  testoutput1  testoutput2  testoutput3
